Fix units in hess tutorial spectrum

--- a/tutorials/hess.ipynb
+++ b/tutorials/hess.ipynb
@@ -300,7 +300,7 @@
    "source": [
     "%%time\n",
     "on_region = CircleSkyRegion(pos_crab, 0.11 * u.deg)\n",
-    "exclusion_mask = images[\"counts\"].copy()\n",
+    "exclusion_mask = Map.from_geom(geom.to_image())\n",
     "exclusion_mask.data = np.ones_like(exclusion_mask.data, dtype=bool)\n",
     "\n",
     "model_pwl = PowerLaw(\n",
@@ -310,9 +310,9 @@
     "config = {\n",
     "    \"outdir\": \".\",\n",
     "    \"background\": {\"on_region\": on_region, \"exclusion_mask\": exclusion_mask},\n",
-    "    \"extraction\": {\"containment_correction\": False},\n",
+    "    \"extraction\": {\"containment_correction\": True},\n",
     "    \"fit\": {\"model\": model_pwl, \"fit_range\": [1, 10] * u.TeV},\n",
-    "    \"fp_binning\": np.logspace(0, 1, 7) * u.TeV,\n",
+    "    \"fp_binning\": np.logspace(0, 1, 11) * u.TeV,\n",
     "}\n",
     "analysis = SpectrumAnalysisIACT(observations=observations, config=config)\n",
     "analysis.run()"
@@ -324,17 +324,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(8, 6))\n",
+    "print(model_pwl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 8))\n",
     "crab_ref = CrabSpectrum(\"hess_pl\").model\n",
     "\n",
     "dataset_fp = analysis.spectrum_result\n",
     "\n",
-    "e_range = [1, 10] * u.TeV\n",
-    "ax_spectrum, ax_residuals = dataset_fp.peek()\n",
-    "crab_ref.plot(ax=ax_spectrum, energy_range=e_range, energy_power=2, label=\"H.E.S.S. 2006 PWL\")\n",
+    "plot_kwargs = {\n",
+    "    \"energy_range\": [1, 10] * u.TeV,\n",
+    "    \"flux_unit\": \"erg-1 cm-2 s-1\",\n",
+    "    \"energy_power\": 2,\n",
+    "}\n",
     "\n",
-    "model.spectral_model.plot(ax=ax_spectrum, energy_range=e_range, energy_power=2, label=\"3D best fit model\")\n",
-    "ax_spectrum.legend()"
+    "model_kwargs = {\"label\": \"1D best fit model\"}\n",
+    "model_kwargs.update(plot_kwargs)\n",
+    "ax_spectrum, ax_residuals = dataset_fp.peek(model_kwargs=model_kwargs)\n",
+    "\n",
+    "crab_ref.plot(ax=ax_spectrum, label=\"H.E.S.S. 2006 PWL\", **plot_kwargs)\n",
+    "model.spectral_model.plot(ax=ax_spectrum, label=\"3D best fit model\", **plot_kwargs)\n",
+    "\n",
+    "ax_spectrum.set_ylim(1e-11, 1e-10)\n",
+    "ax_spectrum.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The difference we see compared to the reference H.E.S.S. 2006 model is because of the appilcation of the containment correction. "
    ]
   },
   {
@@ -612,9 +637,17 @@
    "source": [
     "## Exercises\n",
     "\n",
+    "- Turn of the containment correction of the 1D spectral analysis and compare the result to the reference Crab spectrum\n",
     "- Try analysing another source, e.g. RX J1713.7−3946\n",
     "- Try another model, e.g. a Gaussian spatial shape or exponential cutoff power-law spectrum."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
