Remove model argument from .to_spectrum_dataset()

--- a/tutorials/spectrum_pipe.ipynb
+++ b/tutorials/spectrum_pipe.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "crab_pos = SkyCoord.from_name(\"crab\")\n",
+    "crab_pos = SkyCoord(83.633, 22.014, unit=\"deg\")\n",
     "on_region = CircleSkyRegion(crab_pos, 0.15 * u.deg)\n",
     "\n",
     "model = LogParabola(\n",
@@ -96,7 +96,7 @@
     "    reference=1 * u.TeV,\n",
     ")\n",
     "\n",
-    "flux_point_binning = EnergyBounds.equal_log_spacing(0.77, 30, 5, u.TeV)"
+    "flux_point_binning = EnergyBounds.equal_log_spacing(0.7, 30, 5, u.TeV)"
    ]
   },
   {
