--- a/tutorials/spectrum_simulation.ipynb
+++ b/tutorials/spectrum_simulation.ipynb
@@ -128,7 +128,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = sim.obs.to_spectrum_dataset(model=pwl.copy())\n",
+    "dataset = sim.obs.to_spectrum_dataset()\n",
+    "dataset.model = pwl.copy()\n",
     "\n",
     "fit = Fit([dataset])\n",
     "\n",
@@ -215,7 +216,8 @@
     "%%time\n",
     "results = []\n",
     "for obs in sim.result:\n",
-    "    dataset = obs.to_spectrum_dataset(model=pwl.copy())\n",
+    "    dataset = obs.to_spectrum_dataset()\n",
+    "    dataset.model = pwl.copy()\n",
     "    fit = Fit([dataset])\n",
     "    result = fit.optimize()\n",
     "    results.append(\n",
