--- a/tutorials/spectrum_simulation_cta.ipynb
+++ b/tutorials/spectrum_simulation_cta.ipynb
@@ -158,7 +158,8 @@
    "source": [
     "# Fit data\n",
     "model = model_ref.copy()\n",
-    "dataset = sim.obs.to_spectrum_dataset(model=model)\n",
+    "dataset = sim.obs.to_spectrum_dataset()\n",
+    "dataset.model = model\n",
     "\n",
     "fit = Fit([dataset])\n",
     "result = fit.run()"
