--- a/tutorials/analysis_3d.ipynb
+++ b/tutorials/analysis_3d.ipynb
@@ -47,15 +47,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!gammapy info --no-system"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -372,7 +363,7 @@
    "outputs": [],
    "source": [
     "# define energy grid\n",
-    "energy = energy_axis.edges * energy_axis.unit\n",
+    "energy = energy_axis.edges \n",
     "\n",
     "# mean edisp\n",
     "edisp = make_mean_edisp(\n",
@@ -863,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
