--- a/tutorials/analysis_3d_joint.ipynb
+++ b/tutorials/analysis_3d_joint.ipynb
@@ -166,7 +166,7 @@
    "outputs": [],
    "source": [
     "# define energy grid for edisp\n",
-    "energy = energy_axis.edges * energy_axis.unit"
+    "energy = energy_axis.edges"
    ]
   },
   {
@@ -473,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
