--- a/tutorials/fermi_lat.ipynb
+++ b/tutorials/fermi_lat.ipynb
@@ -260,7 +260,15 @@
     "geom = WcsGeom(wcs=counts.geom.wcs, npix=counts.geom.npix, axes=[axis])\n",
     "\n",
     "coord = counts.geom.get_coord()\n",
-    "data = exposure_hpx.interp_by_coord(coord)\n",
+    "data = exposure_hpx.interp_by_coord(coord)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "exposure = WcsNDMap(geom, data, unit=exposure_hpx.unit)\n",
     "print(exposure.geom)\n",
     "print(exposure.geom.axes[0])"
@@ -334,7 +342,8 @@
     "    {\n",
     "        \"skycoord\": coord.skycoord,\n",
     "        \"energy\": coord[\"energy\"]\n",
-    "        * counts.geom.get_axis_by_name(\"energy\").unit,\n",
+    "        * counts.geom.get_axis_by_name(\"energy\").unit\n",
+    "        \n",
     "    },\n",
     "    interp=3,\n",
     ")\n",
@@ -352,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diffuse_galactic.slice_by_idx({\"energy\": 0}).plot();"
+    "diffuse_galactic.slice_by_idx({\"energy\": 0}).plot(add_cbar=True);"
    ]
   },
   {
@@ -524,8 +533,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e_true = exposure.geom.axes[0].edges * exposure.geom.axes[0].unit\n",
-    "e_reco = counts.geom.axes[0].edges * counts.geom.axes[0].unit\n",
+    "e_true = exposure.geom.axes[0].edges\n",
+    "e_reco = counts.geom.axes[0].edges\n",
     "edisp = EnergyDispersion.from_diagonal_response(e_true=e_true, e_reco=e_reco)"
    ]
   },
@@ -604,6 +613,15 @@
     "    cmap=\"coolwarm\", vmin=-5, vmax=5, add_cbar=True\n",
     ")\n",
     "print(\"Excess counts: \", excess.data.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(counts - background_total.evaluate()).sum_over_axes().smooth(\"0.1 deg\").plot(cmap=\"coolwarm\", add_cbar=True)"
    ]
   },
   {
@@ -699,6 +717,13 @@
     "\n",
     "This works very well at high energies (here above 10 GeV), where the exposure and PSF is almost constant spatially and only varies a little with energy. It is not expected to give good results for low-energy data, where the Fermi-LAT PSF is very large. If you are interested to help us validate down to what energy Fermi-LAT analysis with Gammapy works well (e.g. by re-computing results from 3FHL or other published analysis results), or to extend the Gammapy capabilities (e.g. to work with energy-dependent multi-resolution maps and PSF), that would be very welcome!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -717,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   },
   "toc": {
    "base_numbering": 1,
