--- a/tutorials/cta_data_analysis.ipynb
+++ b/tutorials/cta_data_analysis.ipynb
@@ -62,7 +62,7 @@
     "from gammapy.spectrum import (\n",
     "    SpectrumExtraction,\n",
     "    models,\n",
-    "    FluxPointEstimator,\n",
+    "    FluxPointsEstimator,\n",
     "    FluxPointsDataset,\n",
     ")\n",
     "from gammapy.maps import MapAxis, WcsNDMap, WcsGeom\n",
@@ -444,10 +444,9 @@
     "ebounds = EnergyBounds.equal_log_spacing(1, 40, 4, unit=u.TeV)\n",
     "\n",
     "dataset = stacked_obs.to_spectrum_dataset()\n",
+    "dataset.model = model\n",
     "\n",
-    "fpe = FluxPointEstimator(\n",
-    "    datasets=[dataset], e_edges=ebounds, model=model\n",
-    ")\n",
+    "fpe = FluxPointsEstimator(datasets=[dataset], e_edges=ebounds)\n",
     "flux_points = fpe.run()\n",
     "flux_points.table_formatted"
    ]
