--- a/tutorials/pulsar_analysis.ipynb
+++ b/tutorials/pulsar_analysis.ipynb
@@ -67,7 +67,7 @@
     "from gammapy.utils.fitting import Fit\n",
     "from gammapy.spectrum import (\n",
     "    SpectrumExtraction,\n",
-    "    FluxPointEstimator,\n",
+    "    FluxPointsEstimator,\n",
     "    FluxPointsDataset,\n",
     ")"
    ]
@@ -484,14 +484,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ebounds = EnergyBounds.equal_log_spacing(0.04, 0.4, 7, u.TeV)\n",
+    "e_edges = EnergyBounds.equal_log_spacing(0.04, 0.4, 7, u.TeV)\n",
     "\n",
     "stacked_obs = extraction.spectrum_observations.stack()\n",
     "dataset = stacked_obs.to_spectrum_dataset()\n",
+    "dataset.model = model\n",
     "\n",
-    "fpe = FluxPointEstimator(\n",
-    "    datasets=[dataset], e_edges=ebounds, model=model\n",
-    ")\n",
+    "fpe = FluxPointsEstimator(datasets=[dataset], e_edges=e_edges)\n",
     "\n",
     "flux_points = fpe.run()\n",
     "flux_points.table[\"is_ul\"] = flux_points.table[\"ts\"] < 1\n",
