--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -41,7 +41,7 @@
     "To compute flux points (a.k.a. \"SED\" = \"spectral energy distribution\")\n",
     "\n",
     "* [gammapy.spectrum.FluxPoints](https://docs.gammapy.org/dev/api/gammapy.spectrum.FluxPoints.html)\n",
-    "* [gammapy.spectrum.FluxPointEstimator](https://docs.gammapy.org/dev/api/gammapy.spectrum.FluxPointEstimator.html)\n",
+    "* [gammapy.spectrum.FluxPointsEstimator](https://docs.gammapy.org/dev/api/gammapy.spectrum.FluxPointsEstimator.html)\n",
     "\n",
     "Feedback welcome!"
    ]
@@ -101,7 +101,7 @@
     "from gammapy.utils.energy import EnergyBounds\n",
     "from gammapy.spectrum import SpectrumExtraction\n",
     "from gammapy.spectrum.models import PowerLaw\n",
-    "from gammapy.spectrum import FluxPointEstimator, FluxPointsDataset\n",
+    "from gammapy.spectrum import FluxPointsEstimator, FluxPointsDataset\n",
     "from gammapy.maps import Map\n",
     "from gammapy.utils.fitting import Fit"
    ]
@@ -431,10 +431,9 @@
    "outputs": [],
    "source": [
     "dataset_stacked = stacked_obs.to_spectrum_dataset()\n",
+    "dataset_stacked.model = model\n",
     "\n",
-    "fpe = FluxPointEstimator(\n",
-    "    datasets=[dataset_stacked], e_edges=e_edges, model=model\n",
-    ")\n",
+    "fpe = FluxPointsEstimator(datasets=[dataset_stacked], e_edges=e_edges)\n",
     "flux_points = fpe.run()"
    ]
   },
