--- a/tutorials/analysis_3d.ipynb
+++ b/tutorials/analysis_3d.ipynb
@@ -42,6 +42,7 @@
     "from gammapy.cube import MapMaker, PSFKernel, MapDataset\n",
     "from gammapy.cube.models import SkyModel, SkyDiffuseCube, BackgroundModel\n",
     "from gammapy.spectrum.models import PowerLaw, ExponentialCutoffPowerLaw\n",
+    "from gammapy.spectrum import FluxPointsEstimator\n",
     "from gammapy.image.models import SkyPointSource\n",
     "from gammapy.utils.fitting import Fit"
    ]
@@ -683,7 +684,8 @@
     ")\n",
     "\n",
     "model_ecpl = SkyModel(\n",
-    "    spatial_model=spatial_model, spectral_model=spectral_model\n",
+    "    spatial_model=spatial_model, spectral_model=spectral_model,\n",
+    "    name=\"gc-source\"\n",
     ")"
    ]
   },
@@ -788,7 +790,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally we can check again our model (including now the diffuse emission):"
+    "Finally we compute flux points and check again our model (including now the diffuse emission):"
    ]
   },
   {
@@ -797,7 +799,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_ecpl.spectral_model.plot(energy_range=energy_range, energy_power=2)"
+    "e_edges = [0.3, 1, 3, 10] * u.TeV\n",
+    "fpe = FluxPointsEstimator(datasets=[dataset_combined], e_edges=e_edges, source=\"gc-source\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "flux_points = fpe.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = flux_points.plot(energy_power=2)\n",
+    "model_ecpl.spectral_model.plot(ax=ax, energy_range=energy_range, energy_power=2);"
    ]
   },
   {
@@ -854,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
