cleanup spectral tutorials

--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This notebook explains in detail how to use the classes in [gammapy.spectrum](https://docs.gammapy.org/dev/spectrum/index.html) and related ones. Note, that there is also [spectrum_pipe.ipynb](spectrum_pipe.ipynb) which explains how to do the analysis using a high-level interface. This notebook is aimed at advanced users who want to script taylor-made analysis pipelines and implement new methods.\n",
+    "This notebook explains in detail how to use the classes in [gammapy.spectrum](https://docs.gammapy.org/dev/spectrum/index.html) and related ones.\n",
     "\n",
     "Based on a datasets of 4 Crab observations with H.E.S.S. (simulated events for now) we will perform a full region based spectral analysis, i.e. extracting source and background counts from certain \n",
     "regions, and fitting them using the forward-folding approach. We will use the following classes\n",
@@ -101,6 +101,7 @@
     "from gammapy.utils.energy import EnergyBounds\n",
     "from gammapy.spectrum import SpectrumExtraction\n",
     "from gammapy.spectrum.models import PowerLaw\n",
+    "from gammapy.spectrum import CrabSpectrum\n",
     "from gammapy.spectrum import FluxPointsEstimator, FluxPointsDataset\n",
     "from gammapy.maps import Map\n",
     "from gammapy.utils.fitting import Fit"
@@ -235,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(background_estimator.result[0])"
+    "#print(background_estimator.result[0])"
    ]
   },
   {
@@ -548,6 +549,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Finally, we compare the results of our stacked analysis to a previously published Crab Nebula Spectrum for reference. This is available in `gammapy.spectrum`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model_best_stacked.plot(energy_range=[0.1,30]*u.TeV, label=\"Stacked analysis result\")\n",
+    "model_best_stacked.plot_error(energy_range=[0.1,30]*u.TeV)\n",
+    "CrabSpectrum().model.plot(energy_range=[0.1,30]*u.TeV, label=\"Crab reference\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercises\n",
     "\n",
     "Some things we might do:\n",
@@ -558,22 +579,6 @@
     "\n",
     "TODO: give pointers how to do this (and maybe write a notebook with solutions)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Start exercises here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -592,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
