--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -27,12 +27,12 @@
     "\n",
     "To extract the 1-dim spectral information:\n",
     "\n",
-    "* [gammapy.spectrum.SpectrumObservation](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumObservation.html)\n",
     "* [gammapy.spectrum.SpectrumExtraction](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumExtraction.html)\n",
     "* [gammapy.background.ReflectedRegionsBackgroundEstimator](https://docs.gammapy.org/dev/api/gammapy.background.ReflectedRegionsBackgroundEstimator.html)\n",
     "\n",
-    "\n",
-    "For the global fit (using Sherpa and WSTAT in the background):\n",
+    "To perform the joint fit: \n",
+    "* [gammapy.spectrum.SpectrumDatasetOnOff](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumDatasetOnOff.html)\n",
+    "* [gammapy.spectrum.SpectrumDatasetOnOffStacker](https://docs.gammapy.org/dev/api/gammapy.spectrum.SpectrumDatasetOnOffStacker.html)\n",
     "\n",
     "* [gammapy.spectrum.models.PowerLaw](https://docs.gammapy.org/dev/api/gammapy.spectrum.models.PowerLaw.html)\n",
     "* [gammapy.spectrum.models.ExponentialCutoffPowerLaw](https://docs.gammapy.org/dev/api/gammapy.spectrum.models.ExponentialCutoffPowerLaw.html)\n",
@@ -100,6 +100,7 @@
     "from gammapy.background.reflected import ReflectedRegionsBackgroundEstimator\n",
     "from gammapy.utils.energy import EnergyBounds\n",
     "from gammapy.spectrum import SpectrumExtraction\n",
+    "from gammapy.spectrum import SpectrumDatasetOnOff\n",
     "from gammapy.spectrum.models import PowerLaw\n",
     "from gammapy.spectrum import CrabSpectrum\n",
     "from gammapy.spectrum import FluxPointsEstimator, FluxPointsDataset\n",
@@ -325,7 +326,7 @@
     "\n",
     "print(extraction.spectrum_observations[0])\n",
     "# Write output in the form of OGIP files: PHA, ARF, RMF, BKG\n",
-    "# extraction.run(observations=observations, bkg_estimate=background_estimator.result, outdir=ANALYSIS_DIR)"
+    "# extraction.write(outdir=ANALYSIS_DIR, overwrite=True)"
    ]
   },
   {
@@ -344,7 +345,7 @@
    "outputs": [],
    "source": [
     "# filename = ANALYSIS_DIR + '/ogip_data/pha_obs23523.fits'\n",
-    "# obs = SpectrumObservation.read(filename)\n",
+    "# obs = SpectrumDatasetOnOff.from_ogip_files(filename)\n",
     "\n",
     "# Requires IPython widgets\n",
     "# _ = extraction.spectrum_observations.peek()\n",
@@ -371,7 +372,7 @@
     "    index=2, amplitude=2e-11 * u.Unit(\"cm-2 s-1 TeV-1\"), reference=1 * u.TeV\n",
     ")\n",
     "\n",
-    "datasets_joint = [obs.to_spectrum_dataset() for obs in extraction.spectrum_observations]\n",
+    "datasets_joint = extraction.spectrum_observations\n",
     "\n",
     "for dataset in datasets_joint:\n",
     "    dataset.model = model\n",
@@ -399,7 +400,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8, 6))\n",
-    "ax_spectrum, ax_residual = datasets_joint[0].peek()\n",
+    "ax_spectrum, ax_residual = datasets_joint[0].plot_fit()\n",
     "ax_spectrum.set_ylim(0, 20)"
    ]
   },
@@ -419,9 +420,12 @@
    "outputs": [],
    "source": [
     "# Define energy binning\n",
-    "stacked_obs = extraction.spectrum_observations.stack()\n",
+    "from gammapy.spectrum import SpectrumDatasetOnOffStacker\n",
     "\n",
-    "e_min, e_max = stacked_obs.lo_threshold.to_value(\"TeV\"), 30\n",
+    "stacker = SpectrumDatasetOnOffStacker(extraction.spectrum_observations)\n",
+    "dataset_stacked = stacker.run()\n",
+    "\n",
+    "e_min, e_max = dataset_stacked.counts_on.lo_threshold.to_value(\"TeV\"), 30\n",
     "e_edges = np.logspace(np.log10(e_min), np.log10(e_max), 15) * u.TeV"
    ]
   },
@@ -431,7 +435,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_stacked = stacked_obs.to_spectrum_dataset()\n",
     "dataset_stacked.model = model\n",
     "\n",
     "fpe = FluxPointsEstimator(datasets=[dataset_stacked], e_edges=e_edges)\n",
