Introduce lo and hi thresold properties on SpectrumDatasetOnOff

--- a/tutorials/pulsar_analysis.ipynb
+++ b/tutorials/pulsar_analysis.ipynb
@@ -461,9 +461,12 @@
     ")\n",
     "\n",
     "fit_range = (0.04 * u.TeV, 0.4 * u.TeV)\n",
-    "datasets = extraction.spectrum_observations.to_spectrum_datasets(model=model, fit_range=fit_range)\n",
     "\n",
-    "joint_fit = Fit(datasets)\n",
+    "for obs in extraction.spectrum_observations:\n",
+    "    obs.model = model\n",
+    "    obs.set_fit_energy_range(fit_range[0], fit_range[1])\n",
+    "\n",
+    "joint_fit = Fit(extraction.spectrum_observations)\n",
     "joint_result = joint_fit.run()\n",
     "\n",
     "model.parameters.covariance = joint_result.parameters.covariance\n",
@@ -486,8 +489,11 @@
    "source": [
     "e_edges = EnergyBounds.equal_log_spacing(0.04, 0.4, 7, u.TeV)\n",
     "\n",
-    "stacked_obs = extraction.spectrum_observations.stack()\n",
-    "dataset = stacked_obs.to_spectrum_dataset()\n",
+    "from gammapy.spectrum import SpectrumDatasetOnOffStacker\n",
+    "\n",
+    "stacker = SpectrumDatasetOnOffStacker(extraction.spectrum_observations)\n",
+    "dataset = stacker.run()\n",
+    "\n",
     "dataset.model = model\n",
     "\n",
     "fpe = FluxPointsEstimator(datasets=[dataset], e_edges=e_edges)\n",
