Corrected livetime in SpectrumSimulation

--- a/tutorials/spectrum_simulation.ipynb
+++ b/tutorials/spectrum_simulation.ipynb
@@ -210,7 +210,7 @@
    "source": [
     "# Fit data\n",
     "model = model_ref.copy()\n",
-    "dataset = sim.obs.to_spectrum_dataset()\n",
+    "dataset = sim.obs\n",
     "dataset.model = model\n",
     "\n",
     "fit = Fit([dataset])\n",
