Changed SpectrumDatasetOnOff.counts_on to .counts

--- a/tutorials/spectrum_analysis.ipynb
+++ b/tutorials/spectrum_analysis.ipynb
@@ -425,7 +425,7 @@
     "stacker = SpectrumDatasetOnOffStacker(extraction.spectrum_observations)\n",
     "dataset_stacked = stacker.run()\n",
     "\n",
-    "e_min, e_max = dataset_stacked.counts_on.lo_threshold.to_value(\"TeV\"), 30\n",
+    "e_min, e_max = dataset_stacked.counts.lo_threshold.to_value(\"TeV\"), 30\n",
     "e_edges = np.logspace(np.log10(e_min), np.log10(e_max), 15) * u.TeV"
    ]
   },
